# FastSymApi

./: .gitignore  CONFIGURATION.md  README.md  UV_MIGRATION_NOTES.md  fastsymapi_tests.py  main.py  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  test_symbols_improved.py
.github/workflows/: api-tests.yml  main.yml
fastsymapi/: __init__.py  config.py  download.py  logging.py  routes.py  symbols.py  validation.py
fastsymapi/sql_db/: crud.py  database.py  models.py
test_env/: pyvenv.cfg
tests/: test_api.py  test_download.py  test_routes.py  test_validation.py
