[project]
name = "fastsymapi"
version = "1.2.0"
description = "FastAPI server for debugging and development environments that caches symbols from Microsoft, Google, and Mozilla symbol servers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "P1tt1cus"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.100.0",
    "uvicorn==0.31.1",
    "SQLAlchemy==2.0.19",
    "requests==2.31.0",
    "pydantic==2.1.1",
    "starlette==0.27.0",
    "construct==2.10.70",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastsymapi"]

[tool.pytest.ini_options]
testpaths = [
    ".",
]
python_files = [
    "*_tests.py",
    "test_*.py",
]

[project.scripts]
fastsymapi = "fastsymapi:main"