[project]
name = "fastsymapi"
version = "1.2.0"
description = "FastAPI server for symbol caching and downloading from Microsoft, Google, and Mozilla symbol servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.31.1",
    "sqlalchemy>=2.0.19",
    "requests>=2.31.0",
    "urllib3>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (needed for FastAPI Depends)
    "SIM115", # context manager for open - not always practical with conditional file handles
]

[tool.ruff.lint.isort]
known-first-party = ["fastsymapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
